[project]
name = "fastapi-pos"
version = "0.1.0"
description = ""
authors = [
    {name = "Alberto Vázquez",email = "esbjavo@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
